--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -23,5 +23,5 @@
   .page-load-status
     -# %p.infinite-scroll-request Loading...
     =image_tag src="zawazawa.gif",class:"infinite-scroll-request",alt:"効果音",loding:"lazy"
-    %p.infinite-scroll-last End of content
-    %p.infinite-scroll-error No more pages to load
+    %p.infinite-scroll-last 先生の次回作にご期待ください！
+    %p.infinite-scroll-error 読み込めませんでした
