--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -26,5 +26,5 @@
   - else
     .page-load-status
       .infinite-scroll-request
-      %p.infinite-scroll-last 完  〜おわり〜
+      %p.infinite-scroll-last 先生の次回作にご期待ください！
       %p.infinite-scroll-error 読み込めませんでした
