--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -22,7 +22,7 @@
   = paginate @posts
   - if @posts.last_page?   
     .page-load-status
-      %p.infinite-scroll-last ご応募お待ちしております！
+      %p.infinite-scroll-last 投稿お待ちしております！
   - else
     .page-load-status
       .infinite-scroll-request
