--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -465,7 +465,6 @@ a {
       .share-button{
         margin: 16px 0 0;
         text-align: center;
-        font-size: 0;
         i{
           width: 44px;
           height: 44px;
@@ -681,6 +680,9 @@ footer {
       border:1px solid transparent;
     }
     .balloon-left{
+      display:block !important;
+    }
+    .balloon-rigth{
       display:block !important;
     }
   }
@@ -900,7 +902,7 @@ footer {
   font-size: .75em;
   letter-spacing: 1px;
   height: 38px;
-  width: 160px;
+  width: 230px;
   line-height: 38px;
   overflow: hidden;
   background: white;
@@ -914,7 +916,6 @@ footer {
   &:hover,
   &:focus {
     box-shadow: 0 5px 15px rgba(black,.1);
-    outline-color: #666;
   }
   
   &.animated {
@@ -966,26 +967,27 @@ footer {
     width: 100%;
   }
 
+  &-nav{
+    display: flex;
+    width:100%;
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.3);
+  }
   &-form{
     display: flex;
     &-text{
       margin:0 5px;
-      &:focus{
-        outline-color: #666;
-      }
     }
   }
 
   &-count{
-    height:30px;
-    text-align: left;
-    padding: 5px;
+    width: 50%;
     background-color: rgba(50, 50, 50, 0.3);
   }
 
   &__list{
     height: 370px;    
     overflow: scroll;
+    padding-top:3px;
     &__user{
       display:flex;
       width:100%;
@@ -1061,12 +1063,29 @@ footer {
   }
 }
 
+.show-icon{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 160px;
+  font-size: 1.5em;
+}
+
 .title-link{
-  padding:30px;
   font-size: 3rem;
 }
 
 .show-row{
   max-width: 1080px;
   margin:0 auto;
+}
+
+.like-button{
+  background-color: transparent;
+  border:none;
+}
+
+.good-button{
+  width:50%;
+  background-color: rgba(255, 255, 255, 0.6);
 }
