--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,13 +5,18 @@
   =image_tag src="dogaga.png",class:"efect dogaga js-dogaga",alt:"効果音",loding:"lazy"
   #masonry.contents
     - @posts.each do |post|
-      .thumb-box
-        .thumb{data: {target: "thumb#{post.id}"}}
-          =image_tag src="#{post.image[0]}",class:"thumbnail",alt:"サムネイル",loding:"lazy"
-          .balloon-left.js-marker
-            = simple_format(post.text[0])
-          .balloon-rigth.js-marker
-            = simple_format(post.text[0])
+      = link_to post_path(post),remote: true do
+        .thumb-box
+          .thumb{data: {target: "thumb#{post.id}"}}
+            =image_tag src="#{post.image[0]}",class:"thumbnail",alt:"サムネイル",loding:"lazy"
+            .balloon-left.js-marker
+              = simple_format(post.text[0])
+            .balloon-rigth.js-marker
+              .balloon-like{id:"good-button#{post.id}",data: {good:{button:{id:"#{post.id}"}}}}
+                = render partial: "likes/like", locals: {post: post}
+              .balloon-comment
+                %i.fas.fa-comments
+                #{post.comments_count}
       .modalArea{id:"thumb#{post.id}"}
         #modalBg.modalBg
         .modalWrapper
@@ -25,6 +30,6 @@
       %p.infinite-scroll-last 投稿お待ちしております！
   - else
     .page-load-status
-      .infinite-scroll-request
-      %p.infinite-scroll-last 先生の次回作にご期待ください！
-      %p.infinite-scroll-error 読み込めませんでした
+    =image_tag src="zawazawa.gif",class:"infinite-scroll-request",alt:"効果音",loding:"lazy"
+    %p.infinite-scroll-last 先生の次回作にご期待ください！
+    %p.infinite-scroll-error 読み込めませんでした
