--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -995,6 +995,10 @@ footer {
       margin: 0 10px;
 
       &-image{
+        &:hover{
+          opacity: 0.5;
+          filter: drop-shadow(0px 0px 5px #999);
+        }
         img{
           margin: 0 auto;
           border-radius: 50%;
@@ -1089,3 +1093,15 @@ footer {
   width:50%;
   background-color: rgba(255, 255, 255, 0.6);
 }
+
+.form-title{
+  @include mq-d(){
+    font-size:40px !important;
+  }
+}
+
+.post_img_prevs {
+  max-width: 200px;
+  margin: 0 auto;
+}
+
