--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -2,17 +2,17 @@
   .contents.row
     %h2
       Edit #{resource_name.to_s.humanize}
+    = devise_error_messages!
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-      = devise_error_messages!
       .field.edit-user__icon
-        %img#avatar_img_prev.hidden{src:"#"}
+        %img#img_prev.hidden{src:"#"}
         - if current_user.persisted? && current_user.avatar?
-          = image_tag current_user.avatar.to_s,class: 'avatar_present_img'
+          = image_tag current_user.avatar.to_s,class: 'present_img'
           %label
             = f.check_box :remove_avatar
             画像を削除
         - else
-          = image_tag 'menber.png', class: 'avatar_present_img'
+          = image_tag 'menber.png', class: 'present_img'
           = f.hidden_field :avatar_cache
         = f.file_field :avatar, id: 'post_img'
       .field
@@ -22,20 +22,6 @@
       - if devise_mapping.confirmable? && resource.pending_reconfirmation?
         %div
           Currently waiting confirmation for: #{resource.unconfirmed_email}
-      -# .field
-      -#   = f.label :password
-      -#   %i (leave blank if you don't want to change it)
-      -#   %br/
-      -#   = f.password_field :password, autocomplete: "off"
-      -#   - if @minimum_password_length
-      -#     %br/
-      -#     %em
-      -#       = @minimum_password_length
-      -#       characters minimum
-      -# .field
-      -#   = f.label :password_confirmation
-      -#   %br/
-      -#   = f.password_field :password_confirmation, autocomplete: "off"
       .field
         = f.label :current_password
         %i (we need your current password to confirm your changes)
@@ -43,7 +29,4 @@
         = f.password_field :current_password, autocomplete: "off"
       .actions
         = f.submit "Update"
-    -# %h3 Cancel my account
-    -# %p
-    -#   Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-    -# = link_to "Back", :back
+      
